--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
-    <meta name="description" content="Developed by Osho Iseoluwa (theCephas - tc)">
+    <meta
+      name="Image Gallery"
+      content="Developed by Osho Iseoluwa (theCephas - tc)"
+    />
   </head>
   <body>
     <div id="root"></div>
